src/parser/WekaConfigGrammarParser.java
// Generated from src/parser/WekaConfigGrammar.g4 by ANTLR 4.2.2

    package parser;
    import java.util.List;
    import java.util.ArrayList;
    import org.antlr.v4.runtime.Parser;
    import interpretation.*;
 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WekaConfigGrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STARTTAG=1, ENDTAG=2, SLASH=3, COMMA=4, DIGIT=5, MINUS=6, DOT=7, EQ=8, 
		HK=9, SMALLCHAR=10, CAPITALCHAR=11, WS=12, SPACE=13, BSLASH=14, HEAD=15;
	public static final String[] tokenNames = {
		"<INVALID>", "'<'", "'>'", "'/'", "','", "DIGIT", "'-'", "'.'", "'='", 
		"'\"'", "SMALLCHAR", "CAPITALCHAR", "WS", "' '", "'\\'", "'^'"
	};
	public static final int
		RULE_configfile = 0, RULE_element = 1, RULE_elementend = 2, RULE_attributelist = 3, 
		RULE_keyvalue = 4, RULE_longend = 5, RULE_shortend = 6, RULE_string = 7, 
		RULE_value = 8, RULE_numeric = 9, RULE_sequence = 10, RULE_explizit = 11, 
		RULE_implizit = 12, RULE_path = 13, RULE_mixed = 14, RULE_number = 15, 
		RULE_power = 16, RULE_integer = 17, RULE_floating = 18;
	public static final String[] ruleNames = {
		"configfile", "element", "elementend", "attributelist", "keyvalue", "longend", 
		"shortend", "string", "value", "numeric", "sequence", "explizit", "implizit", 
		"path", "mixed", "number", "power", "integer", "floating"
	};

	@Override
	public String getGrammarFileName() { return "WekaConfigGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WekaConfigGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ConfigfileContext extends ParserRuleContext {
		public ConfigFile f;
		public ElementContext e;
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public ConfigfileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configfile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).enterConfigfile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).exitConfigfile(this);
		}
	}

	public final ConfigfileContext configfile() throws RecognitionException {
		ConfigfileContext _localctx = new ConfigfileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_configfile);

		       ((ConfigfileContext)_localctx).f =  new ConfigFile(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(38); ((ConfigfileContext)_localctx).e = element();
				 _localctx.f.addElement(((ConfigfileContext)_localctx).e.el); 
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STARTTAG );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public Element el;
		public StringContext name;
		public AttributelistContext a;
		public ElementendContext e;
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(WekaConfigGrammarParser.SPACE); }
		public AttributelistContext attributelist() {
			return getRuleContext(AttributelistContext.class,0);
		}
		public ElementendContext elementend() {
			return getRuleContext(ElementendContext.class,0);
		}
		public TerminalNode SPACE(int i) {
			return getToken(WekaConfigGrammarParser.SPACE, i);
		}
		public TerminalNode STARTTAG() { return getToken(WekaConfigGrammarParser.STARTTAG, 0); }
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).exitElement(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);

		       ((ElementContext)_localctx).el =  new Element(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); match(STARTTAG);
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACE) {
				{
				{
				setState(46); match(SPACE);
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(52); ((ElementContext)_localctx).name = string();
			 _localctx.el.setElementName(((ElementContext)_localctx).name.mstring); 
			setState(62);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(55); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(54); match(SPACE);
					}
					}
					setState(57); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SPACE );
				setState(59); ((ElementContext)_localctx).a = attributelist();
				 _localctx.el.setAttributeList(((ElementContext)_localctx).a.attr); 
				}
				break;
			}
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACE) {
				{
				{
				setState(64); match(SPACE);
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70); ((ElementContext)_localctx).e = elementend();
			 _localctx.el.setElementEnd(((ElementContext)_localctx).e.end); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementendContext extends ParserRuleContext {
		public ElementEnd end;
		public LongendContext l;
		public ShortendContext s;
		public ShortendContext shortend() {
			return getRuleContext(ShortendContext.class,0);
		}
		public LongendContext longend() {
			return getRuleContext(LongendContext.class,0);
		}
		public ElementendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elementend; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).enterElementend(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).exitElementend(this);
		}
	}

	public final ElementendContext elementend() throws RecognitionException {
		ElementendContext _localctx = new ElementendContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_elementend);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			switch (_input.LA(1)) {
			case ENDTAG:
				{
				setState(73); ((ElementendContext)_localctx).l = longend();
				 ((ElementendContext)_localctx).end =  ((ElementendContext)_localctx).l.le; 
				}
				break;
			case SLASH:
				{
				setState(76); ((ElementendContext)_localctx).s = shortend();
				 ((ElementendContext)_localctx).end =  ((ElementendContext)_localctx).s.se; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributelistContext extends ParserRuleContext {
		public AttributeList attr;
		public KeyvalueContext k1;
		public KeyvalueContext keyvalue(int i) {
			return getRuleContext(KeyvalueContext.class,i);
		}
		public List<TerminalNode> SPACE() { return getTokens(WekaConfigGrammarParser.SPACE); }
		public List<KeyvalueContext> keyvalue() {
			return getRuleContexts(KeyvalueContext.class);
		}
		public TerminalNode SPACE(int i) {
			return getToken(WekaConfigGrammarParser.SPACE, i);
		}
		public AttributelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributelist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).enterAttributelist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).exitAttributelist(this);
		}
	}

	public final AttributelistContext attributelist() throws RecognitionException {
		AttributelistContext _localctx = new AttributelistContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attributelist);

		       ((AttributelistContext)_localctx).attr =  new AttributeList();
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(81); ((AttributelistContext)_localctx).k1 = keyvalue();
				 _localctx.attr.addKeyValue(((AttributelistContext)_localctx).k1.kv); 
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(83); match(SPACE);
						}
						} 
					}
					setState(88);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				}
				}
				setState(91); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SMALLCHAR || _la==CAPITALCHAR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeyvalueContext extends ParserRuleContext {
		public KeyValue kv;
		public StringContext s;
		public ValueContext v;
		public List<TerminalNode> HK() { return getTokens(WekaConfigGrammarParser.HK); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode HK(int i) {
			return getToken(WekaConfigGrammarParser.HK, i);
		}
		public TerminalNode EQ() { return getToken(WekaConfigGrammarParser.EQ, 0); }
		public KeyvalueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keyvalue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).enterKeyvalue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).exitKeyvalue(this);
		}
	}

	public final KeyvalueContext keyvalue() throws RecognitionException {
		KeyvalueContext _localctx = new KeyvalueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_keyvalue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); ((KeyvalueContext)_localctx).s = string();
			setState(94); match(EQ);
			setState(95); match(HK);
			setState(96); ((KeyvalueContext)_localctx).v = value();
			setState(97); match(HK);
			((KeyvalueContext)_localctx).kv =  new KeyValue(((KeyvalueContext)_localctx).s.mstring, ((KeyvalueContext)_localctx).v.val); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LongendContext extends ParserRuleContext {
		public Longend le;
		public ElementContext e;
		public StringContext s;
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode SLASH() { return getToken(WekaConfigGrammarParser.SLASH, 0); }
		public TerminalNode ENDTAG(int i) {
			return getToken(WekaConfigGrammarParser.ENDTAG, i);
		}
		public TerminalNode STARTTAG() { return getToken(WekaConfigGrammarParser.STARTTAG, 0); }
		public List<TerminalNode> ENDTAG() { return getTokens(WekaConfigGrammarParser.ENDTAG); }
		public LongendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_longend; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).enterLongend(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).exitLongend(this);
		}
	}

	public final LongendContext longend() throws RecognitionException {
		LongendContext _localctx = new LongendContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_longend);

		       ((LongendContext)_localctx).le =  new Longend();
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(100); match(ENDTAG);
			setState(104); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(101); ((LongendContext)_localctx).e = element();
					 _localctx.le.addElement(((LongendContext)_localctx).e.el);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(106); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER );
			setState(108); match(STARTTAG);
			setState(109); match(SLASH);
			setState(110); ((LongendContext)_localctx).s = string();
			 _localctx.le.setEndName(((LongendContext)_localctx).s.mstring); 
			setState(112); match(ENDTAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShortendContext extends ParserRuleContext {
		public ShortEnd se;
		public TerminalNode SLASH() { return getToken(WekaConfigGrammarParser.SLASH, 0); }
		public TerminalNode ENDTAG() { return getToken(WekaConfigGrammarParser.ENDTAG, 0); }
		public ShortendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shortend; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).enterShortend(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).exitShortend(this);
		}
	}

	public final ShortendContext shortend() throws RecognitionException {
		ShortendContext _localctx = new ShortendContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_shortend);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(SLASH);
			setState(115); match(ENDTAG);
			((ShortendContext)_localctx).se =  new ShortEnd(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public MyString mstring;
		public Token s;
		public Token c;
		public List<TerminalNode> SMALLCHAR() { return getTokens(WekaConfigGrammarParser.SMALLCHAR); }
		public TerminalNode SMALLCHAR(int i) {
			return getToken(WekaConfigGrammarParser.SMALLCHAR, i);
		}
		public TerminalNode CAPITALCHAR(int i) {
			return getToken(WekaConfigGrammarParser.CAPITALCHAR, i);
		}
		public List<TerminalNode> CAPITALCHAR() { return getTokens(WekaConfigGrammarParser.CAPITALCHAR); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).exitString(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_string);

		       ((StringContext)_localctx).mstring =  new MyString(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(122);
				switch (_input.LA(1)) {
				case SMALLCHAR:
					{
					setState(118); ((StringContext)_localctx).s = match(SMALLCHAR);
					 _localctx.mstring.add((((StringContext)_localctx).s!=null?((StringContext)_localctx).s.getText():null)); 
					}
					break;
				case CAPITALCHAR:
					{
					setState(120); ((StringContext)_localctx).c = match(CAPITALCHAR);
					 _localctx.mstring.add((((StringContext)_localctx).c!=null?((StringContext)_localctx).c.getText():null)); 
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(124); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SMALLCHAR || _la==CAPITALCHAR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public Value val;
		public StringContext s;
		public NumericContext n;
		public MixedContext m;
		public PathContext p;
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public MixedContext mixed() {
			return getRuleContext(MixedContext.class,0);
		}
		public NumericContext numeric() {
			return getRuleContext(NumericContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(126); ((ValueContext)_localctx).s = string();
				 ((ValueContext)_localctx).val =  ((ValueContext)_localctx).s.mstring; 
				}
				break;

			case 2:
				{
				setState(129); ((ValueContext)_localctx).n = numeric();
				 ((ValueContext)_localctx).val =  ((ValueContext)_localctx).n.num; 
				}
				break;

			case 3:
				{
				setState(132); ((ValueContext)_localctx).m = mixed();
				 ((ValueContext)_localctx).val =  ((ValueContext)_localctx).m.mmixed; 
				}
				break;

			case 4:
				{
				setState(135); ((ValueContext)_localctx).p = path();
				 ((ValueContext)_localctx).val =  ((ValueContext)_localctx).p.p;
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumericContext extends ParserRuleContext {
		public MyNumeric num;
		public NumberContext n;
		public SequenceContext s;
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public NumericContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numeric; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).enterNumeric(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).exitNumeric(this);
		}
	}

	public final NumericContext numeric() throws RecognitionException {
		NumericContext _localctx = new NumericContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_numeric);

			MyNumber mn = null;
		        Sequence seq = null;
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140); ((NumericContext)_localctx).n = number();
			 mn = ((NumericContext)_localctx).n.num; 
			setState(145);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(142); ((NumericContext)_localctx).s = sequence();
				 seq = ((NumericContext)_localctx).s.seq;
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {

			                 if(seq == null)
			                    ((NumericContext)_localctx).num =  mn;
			                 else {
			                       ((NumericContext)_localctx).num =  seq;
			                       _localctx.num.setFirstNumber(mn);
			                 }
			 
			exitRule();
		}
		return _localctx;
	}

	public static class SequenceContext extends ParserRuleContext {
		public Sequence seq;
		public NumberContext n;
		public ExplizitContext e;
		public ImplizitContext i;
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public ExplizitContext explizit() {
			return getRuleContext(ExplizitContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(WekaConfigGrammarParser.COMMA, 0); }
		public ImplizitContext implizit() {
			return getRuleContext(ImplizitContext.class,0);
		}
		public SequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).enterSequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).exitSequence(this);
		}
	}

	public final SequenceContext sequence() throws RecognitionException {
		SequenceContext _localctx = new SequenceContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sequence);

		       MyNumber nm = null;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147); match(COMMA);
			setState(148); ((SequenceContext)_localctx).n = number();
			 nm = ((SequenceContext)_localctx).n.num; 
			setState(154);
			switch (_input.LA(1)) {
			case COMMA:
			case HK:
				{
				setState(150); ((SequenceContext)_localctx).e = explizit();
				 ((SequenceContext)_localctx).seq =   ((SequenceContext)_localctx).e.exp; 
				}
				break;
			case DOT:
				{
				setState(153); ((SequenceContext)_localctx).i = implizit();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			 ((SequenceContext)_localctx).seq =  ((SequenceContext)_localctx).i.imp; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {

			         _localctx.seq.setNextNumber(nm); 
			exitRule();
		}
		return _localctx;
	}

	public static class ExplizitContext extends ParserRuleContext {
		public Explizit exp;
		public NumberContext n;
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(WekaConfigGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(WekaConfigGrammarParser.COMMA, i);
		}
		public ExplizitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_explizit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).enterExplizit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WekaConfigGrammarListener ) ((WekaConfigGrammarListener)listener).exitExplizit(this);
		}
	}

	public final ExplizitContext explizit() throws RecognitionException {
		ExplizitContext _localctx = new ExplizitContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_explizit);
